Fix hand-dial popup crash, widget data loss, dual-color console colors; clear all deprecation warnings
- ColorWheelPopup: fix long-press RANDOM hand-dial never opening. Root
  cause was structural, not a timing race - the wheel was anchored to a
  button living inside the already-open Dual Color popup, and Android
  rejects a new popup window parented to another popup's window. Now
  anchors to the activity's own decor view instead. Applied the same
  BadTokenException guard to every other popup in the app as a
  precaution against the same crash class.
- WidgetStatusFetcher: fix home-screen widgets showing a real "Updated"
  time with permanently blank temp/hum/diffuser values. The MQTT cloud
  fetch released as soon as any one board packet arrived instead of
  waiting for climate/diffuser data specifically, so a fast status
  packet could short-circuit the fetch before the readings showed up.
- Dual Color console log (SAVE DUAL COLOR / shake-triggered) now
  renders real L/R colour swatches instead of separately-tinted
  numbers, matching the incoming echo line.
- Widget "Updated HH:MM" label shortened to "U:HH:MM".
- Cleared every Java deprecation warning across app/library/
  avloadingindicator (Handler, NetworkInfo, PackageInfo.versionCode,
  startActivityForResult migrated to the Activity Result API, etc.) -
  no functional changes.
- Version rebrand: versionMajor 1 -> 8, versionCode reset to mark the
  8.0 generation; publish_release.ps1's hardcoded APK path and
  app/build.gradle's DeleteBuild.bat invocation fixed for the renamed
  project folder.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>