@@ -5,7 +5,6 @@ import android.content.Context;
 import android.content.res.TypedArray;
 import android.graphics.Canvas;
 import android.graphics.Color;
-import android.graphics.Rect;
 import android.graphics.drawable.Animatable;
 import android.graphics.drawable.Drawable;
 import android.os.Build;
@@ -171,13 +170,11 @@ public class AVLoadingIndicatorView extends View {
         drawableClassName.append(indicatorName);
         try {
             Class<?> drawableClass = Class.forName(drawableClassName.toString());
-            Indicator indicator = (Indicator) drawableClass.newInstance();
+            Indicator indicator = (Indicator) drawableClass.getDeclaredConstructor().newInstance();
             setIndicator(indicator);
         } catch (ClassNotFoundException e) {
             Log.e(TAG,"Didn't find your class , check the name again !");
-        } catch (InstantiationException e) {
-            e.printStackTrace();
-        } catch (IllegalAccessException e) {
+        } catch (ReflectiveOperationException e) {
             e.printStackTrace();
         }
     }
@@ -273,12 +270,10 @@ public class AVLoadingIndicatorView extends View {
     @Override
     public void invalidateDrawable(Drawable dr) {
         if (verifyDrawable(dr)) {
-            final Rect dirty = dr.getBounds();
-            final int scrollX = getScrollX() + getPaddingLeft();
-            final int scrollY = getScrollY() + getPaddingTop();
-
-            invalidate(dirty.left + scrollX, dirty.top + scrollY,
-                    dirty.right + scrollX, dirty.bottom + scrollY);
+            // The dirty-rect overload this used to call is deprecated - the
+            // framework no longer does anything with the rect, so a plain
+            // invalidate() is equivalent (no dirty-region calc needed either).
+            invalidate();
         } else {
             super.invalidateDrawable(dr);
         }
